# flux

./: .gitignore  Cargo.toml
crates/abi/: Cargo.toml
crates/abi/abi/: ContinuousClearingAuction.json  IAuctionStateLens.json  IContinuousClearingAuctionFactory.json  IERC20Minimal.json
crates/abi/src/: cca.rs  erc20.rs  factory.rs  lens.rs  lib.rs
crates/cli/: Cargo.toml  README.md  bids.example.toml
crates/cli/src/: .env.example  config.rs  lib.rs  main.rs  provider.rs
crates/cli/src/abi/: hooks.rs  lens.rs  mod.rs
crates/cli/src/commands/: bid.rs  status.rs
crates/cli/src/domain/: auction.rs  bid.rs  currency.rs  mod.rs  price.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  error.rs  lib.rs  validation.rs
crates/core/src/blocks/: mod.rs  producer.rs
crates/core/src/executor/: cache.rs  context.rs  core.rs  intent.rs  mod.rs  outcome.rs
crates/core/src/hooks/: mod.rs  noop.rs  traits.rs
crates/core/src/orchestrator/: cache.rs  core.rs  mod.rs  result.rs  strategy.rs
crates/core/src/types/: action.rs  bid.rs  checkpoint.rs  config.rs  mod.rs  primitives.rs  state.rs
crates/reporting/: Cargo.toml
crates/runtime/: Cargo.toml
crates/utils/: Cargo.toml
