[package]
name = "flux-cli"
version.workspace = true
edition.workspace = true

[dependencies]
alloy.workspace = true
clap = { version = "4.5.20", features = ["derive", "env"] }
dirs = "6.0.0"
eyre = "0.6.12"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
rust_decimal = "1.39.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1.43"
tracing-subscriber = "0.3.22"
